--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -34,3 +34,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: gh-pages # The branch the action should deploy to.
         FOLDER: docs_sphinx/_build/html # The folder the action should deploy.
+
+
+    && cd _build/html
+    && touch .nojekyll    
