--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -24,17 +24,13 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@1.0.0
     - name: Build docs
-      run: cd docs_sphinx
+      run: cd docs
         && make html
-        && cd _build/html
+        && cd build/html
         && touch .nojekyll
     - name: Deploy
       uses: JamesIves/github-pages-deploy-action@releases/v3
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: gh-pages # The branch the action should deploy to.
-        FOLDER: docs_sphinx/_build/html # The folder the action should deploy.
-
-
-    && cd _build/html
-    && touch .nojekyll    
+        FOLDER: docs/build/html # The folder the action should deploy.
