--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,13 +28,14 @@ jobs:
         && make html
         && cd _build/html
         && touch .nojekyll
-    - name: Deploy
-      uses: JamesIves/github-pages-deploy-action@releases/v3
+    - name: Deploy to GitHub Pages
+      uses: JamesIves/github-pages-deploy-action@v4.4.3
+            
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: gh-pages # The branch the action should deploy to.
-        FOLDER: docs_sphinx/_build/html # The folder the action should deploy.
+        FOLDER: docs/build/html # The folder the action should deploy.
 
 
-    && cd _build/html
+    && cd build/html
     && touch .nojekyll    
