--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,9 +5,11 @@ on:
   #  branches-ignore:
   #    - '**'  
   push:
-    branches: [ master ]
+    branches: 
+      - main
   pull_request:
-    branches: [ master ]
+    branches:
+      - main
   
 jobs:
   build:
