--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,9 +7,15 @@ name: Tsunami Lab
 
 on:
   push:
-    branches: [ main, dev ]
+    branches:    
+      - 'dev'
+      - 'main'
+
   pull_request:
-    branches: [ main, dev ]
+    branches:    
+      - 'dev'
+      - 'main'
+
   schedule:
     - cron: 0 0 * * *
 
