action will only build on main branch
because dev kept failing

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,7 +14,7 @@ jobs:
   build:
 
     runs-on: macos-latest
-
+    if: github.ref == 'refs/heads/main'
     steps:
     - name: Requirements
       run: brew install doxygen
