--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,4 +1,9 @@
-name: Docs
+##
+# @author Luca-Philipp Grumbach, Richard Hofmann
+# @section DESCRIPTION
+# Build the documentation using GitHub Actions.
+##
+name: Build documentation
 
 on:
   push:
