changed MiddleStates.cpp to GeneralDiscontinuity.cpp

--- a/src/SConscript
+++ b/src/SConscript
@@ -13,7 +13,7 @@ l_sources = [ 'solvers/Roe.cpp',
               'setups/DamBreak1d.cpp',
               'setups/RareRare1d.cpp',
               'setups/ShockShock1d.cpp',
-              'setups/MiddleStates.cpp',
+              'setups/GeneralDiscontinuity.cpp',
               'io/Csv.cpp' ]
 
 for l_so in l_sources:
