--- a/config.json
+++ b/config.json
@@ -1,8 +1,9 @@
 {
     "solver": "fwave",
-    "nx": 100,
+    "nx": 500,
     "ny": 1,
+    "simulationSize": 50,
     "useBathymetry": true,
-    "hasBoundaryL": false,
-    "hasBoundaryR": false
+    "hasBoundaryL": true,
+    "hasBoundaryR": true
 }
