add Discontinuity test

--- a/src/SConscript
+++ b/src/SConscript
@@ -29,7 +29,8 @@ l_tests = [ 'tests.cpp',
             'io/Csv.test.cpp',
             'setups/DamBreak1d.test.cpp',
             'setups/RareRare1d.test.cpp',
-            'setups/ShockShock1d.test.cpp' ]
+            'setups/ShockShock1d.test.cpp',
+            'setups/GeneralDiscontinuity1d.test.cpp']
 
 for l_te in l_tests:
   env.tests.append( env.Object( l_te ) )
