--- a/src/SConscript
+++ b/src/SConscript
@@ -14,6 +14,8 @@ l_sources = [ 'solvers/Roe.cpp',
               'setups/RareRare1d.cpp',
               'setups/ShockShock1d.cpp',
               'setups/GeneralDiscontinuity1d.cpp',
+              'setups/Subcritical1d.cpp',
+              'setups/Supercritical1d.cpp',
               'io/Csv.cpp' ]
 
 for l_so in l_sources:
