--- a/src/SConscript
+++ b/src/SConscript
@@ -16,6 +16,7 @@ l_sources = [ 'solvers/Roe.cpp',
               'setups/GeneralDiscontinuity1d.cpp',
               'setups/Subcritical1d.cpp',
               'setups/Supercritical1d.cpp',
+              'setups/TsunamiEvent1d.cpp',
               'io/Csv.cpp' ]
 
 for l_so in l_sources:
