--- a/src/SConscript
+++ b/src/SConscript
@@ -10,10 +10,12 @@ Import('env')
 l_sources = [ 'solvers/Roe.cpp',
              'solvers/Fwave.cpp',
               'patches/WavePropagation1d.cpp',
+              'patches/WavePropagation2d.cpp',
               'setups/DamBreak1d.cpp',
               'setups/RareRare1d.cpp',
               'setups/ShockShock1d.cpp',
               'setups/GeneralDiscontinuity1d.cpp',
+              'setups/GeneralDiscontinuity2d.cpp',
               'setups/Subcritical1d.cpp',
               'setups/Supercritical1d.cpp',
               'setups/TsunamiEvent1d.cpp',
