--- a/src/SConscript
+++ b/src/SConscript
@@ -12,6 +12,7 @@ l_sources = [ 'solvers/Roe.cpp',
               'patches/WavePropagation1d.cpp',
               'patches/WavePropagation2d.cpp',
               'setups/DamBreak1d.cpp',
+              'setups/CircularDamBreak2d.cpp',
               'setups/RareRare1d.cpp',
               'setups/ShockShock1d.cpp',
               'setups/GeneralDiscontinuity1d.cpp',
