--- a/src/SConscript
+++ b/src/SConscript
@@ -38,7 +38,9 @@ l_tests = [ 'tests.cpp',
             'setups/GeneralDiscontinuity1d.test.cpp',
             'setups/TsunamiEvent1d.test.cpp',
             'setups/Supercritical1d.test.cpp',
-            'setups/Subcritical1d.test.cpp'
+            'setups/Subcritical1d.test.cpp',
+            'setups/CircularDamBreak2d.test.cpp',
+            'patches/WavePropagation2d.test.cpp'
             ]
 
 for l_te in l_tests:
