add Station io setup and in main first implementation

--- a/src/SConscript
+++ b/src/SConscript
@@ -19,7 +19,8 @@ l_sources = [ 'solvers/Roe.cpp',
               'setups/Subcritical1d.cpp',
               'setups/Supercritical1d.cpp',
               'setups/TsunamiEvent1d.cpp',
-              'io/Csv.cpp' ]
+              'io/Csv.cpp',
+              'io/Station.cpp']
 
 for l_so in l_sources:
   env.sources.append( env.Object( l_so ) )
