setup changes (see description for details)
- added following parameters to json:
> setup
> bathymetry file path
> endTime
- added config file path as possible input parameter

--- a/config.json
+++ b/config.json
@@ -7,6 +7,5 @@
     "hasBoundaryL": false,
     "hasBoundaryR": false,
     "hasBoundaryU": false,
-    "hasBoundaryD": false,
-    "dimension": 2
+    "hasBoundaryD": false
 }
