add stations to config file

--- a/config.json
+++ b/config.json
@@ -7,5 +7,10 @@
     "hasBoundaryL": false,
     "hasBoundaryR": false,
     "hasBoundaryU": false,
-    "hasBoundaryD": false
+    "hasBoundaryD": false,
+    "stations":[
+        { "name":"station_1", "locX":10, "locY":10 },
+        { "name":"station_2", "locX":15, "locY":10 },
+        { "name":"station_3", "locX":20, "locY":10 }
+      ]
 }
