--- a/config.json
+++ b/config.json
@@ -11,6 +11,8 @@
     "stations":[
         { "name":"station_1", "locX":10, "locY":10 },
         { "name":"station_2", "locX":15, "locY":10 },
-        { "name":"station_3", "locX":20, "locY":10 }
-      ]
+        { "name":"station_3", "locX":20, "locY":10 },
+        { "name":"station_4", "locX":25, "locY":10 }
+      ],
+    "stationFrequency": 1
 }
