changes in documentation
- updated code snippets in task 4.1
- updated Froude code documentation
- updated Station code documentation
- added calculations namespace to documentation
- finished Station unit test
- worked on WavePropagation2d unit test
- TODO: fix failing tests

--- a/src/SConscript
+++ b/src/SConscript
@@ -43,6 +43,7 @@ l_tests = [ 'tests.cpp',
             'setups/Subcritical1d.test.cpp',
             'setups/CircularDamBreak2d.test.cpp',
             'patches/WavePropagation2d.test.cpp',
+            'io/Station.test.cpp',
             'calculations/Froude.test.cpp']
 
 for l_te in l_tests:
