--- a/config.json
+++ b/config.json
@@ -1,19 +1,20 @@
 {
     "solver": "fwave",
-    "nx": 50,
-    "ny": 1,
+    "nx": 100,
+    "ny": 100,
     "simulationSizeX": 100,
-    "simulationSizeY": 1,
-    "setup":"DAMBREAK1D",
-    "hasBoundaryL": false,
-    "hasBoundaryR": false,
-    "hasBoundaryU": false,
-    "hasBoundaryD": false,
+    "simulationSizeY": 100,
+    "setup":"CIRCULARDAMBREAK2D",
+    "hasBoundaryL": true,
+    "hasBoundaryR": true,
+    "hasBoundaryU": true,
+    "hasBoundaryD": true,
     "stations":[
         { "name":"station_1", "locX":10, "locY":0 },
         { "name":"station_2", "locX":15, "locY":0 },
         { "name":"station_3", "locX":20, "locY":0 },
         { "name":"station_4", "locX":25, "locY":0 }
       ],
-    "stationFrequency": 1
+    "stationFrequency": 1,
+    "endTime":50
 }
