finished WaveProp2d test
and renamed up to top and down to bottom

--- a/config.json
+++ b/config.json
@@ -5,10 +5,10 @@
     "simulationSizeX": 100,
     "simulationSizeY": 100,
     "setup":"CIRCULARDAMBREAK2D",
-    "hasBoundaryL": true,
-    "hasBoundaryR": true,
-    "hasBoundaryU": true,
-    "hasBoundaryD": true,
+    "hasBoundaryL": false,
+    "hasBoundaryR": false,
+    "hasBoundaryU": false,
+    "hasBoundaryD": false,
     "stations":[
         { "name":"station_1", "locX":10, "locY":0 },
         { "name":"station_2", "locX":15, "locY":0 },
