--- a/src/SConscript
+++ b/src/SConscript
@@ -20,6 +20,7 @@ l_sources = [ 'solvers/Roe.cpp',
               'setups/Supercritical1d.cpp',
               'setups/TsunamiEvent1d.cpp',
               'io/Csv.cpp',
+              'io/BathymetryLoader.cpp',
               'io/Station.cpp',
               'calculations/Froude.cpp']
 
