fixed documentation code snippets and added bathymetry loader test

--- a/src/SConscript
+++ b/src/SConscript
@@ -35,6 +35,7 @@ l_tests = [ 'tests.cpp',
             'solvers/Fwave.test.cpp',
             'patches/WavePropagation1d.test.cpp',
             'io/Csv.test.cpp',
+            'io/BathymetryLoader.test.cpp',
             'setups/DamBreak1d.test.cpp',
             'setups/RareRare1d.test.cpp',
             'setups/ShockShock1d.test.cpp',
