--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
           sudo apt-get install scons
           sudo apt-get install valgrind
           sudo apt-get install cppcheck
+          sudo apt-get install netcdf-bin
           git submodule init
           git submodule update
 
