--- a/src/SConscript
+++ b/src/SConscript
@@ -19,6 +19,7 @@ l_sources = [ 'solvers/Roe.cpp',
               'setups/Subcritical1d.cpp',
               'setups/Supercritical1d.cpp',
               'setups/TsunamiEvent1d.cpp',
+              'setups/ArtificialTsunami2d.cpp',
               'io/Csv.cpp',
               'io/BathymetryLoader.cpp',
               'io/Station.cpp',
@@ -45,6 +46,7 @@ l_tests = [ 'tests.cpp',
             'setups/Supercritical1d.test.cpp',
             'setups/Subcritical1d.test.cpp',
             'setups/CircularDamBreak2d.test.cpp',
+            'setups/ArtificialTsunami2d.test.cpp',
             'patches/WavePropagation2d.test.cpp',
             'io/Station.test.cpp',
             'calculations/Froude.test.cpp',
