finished netCdf reader and added bathymetry reading support

--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
     "solver": "fwave",
-    "nx": 50,
-    "ny": 50,
-    "simulationSizeX": 100,
-    "simulationSizeY": 100,
+    "nx": 10,
+    "ny": 10,
+    "simulationSizeX": 10,
+    "simulationSizeY": 10,
     "setup":"CIRCULARDAMBREAK2D",
-    "bathymetry":"resources/bathymetry/singleWall2d_100x100.csv",
+    "bathymetry":"resources/netCdfTest.nc",
     "hasBoundaryL": false,
     "hasBoundaryR": false,
     "hasBoundaryU": false,
