--- a/src/SConscript
+++ b/src/SConscript
@@ -19,6 +19,7 @@ l_sources = [ 'solvers/Roe.cpp',
               'setups/Subcritical1d.cpp',
               'setups/Supercritical1d.cpp',
               'setups/TsunamiEvent1d.cpp',
+              'setups/TsunamiEvent2d.cpp',
               'setups/ArtificialTsunami2d.cpp',
               'io/Csv.cpp',
               'io/BathymetryLoader.cpp',
