fixed scaling and offset for simulations

--- a/config.json
+++ b/config.json
@@ -1,9 +1,11 @@
 {
     "solver": "fwave",
-    "nx": 100,
-    "ny": 100,
-    "simulationSizeX": 100,
-    "simulationSizeY": 100,
+    "nx": 1000,
+    "ny": 1000,
+    "simulationSizeX": 10000,
+    "simulationSizeY": 10000,
+    "offsetX": -5000,
+    "offsetY": -5000,
     "setup":"TSUNAMIEVENT2D",
     "hasBoundaryL": false,
     "hasBoundaryR": false,
