--- a/config.json
+++ b/config.json
@@ -2,14 +2,10 @@
     "solver": "fwave",
     "nx": 1000,
     "ny": 1000,
-    "simulationSizeX": 10000,
-    "simulationSizeY": 10000,
-    "offsetX": -5000,
-    "offsetY": -5000,
-    "setup":"TSUNAMIEVENT2D",
+    "setup":"CHILE",
     "hasBoundaryL": false,
     "hasBoundaryR": false,
     "hasBoundaryU": false,
     "hasBoundaryD": false,
-    "endTime":100
+    "endTime":36000
 }
