--- a/configs/config.json
+++ b/configs/config.json
@@ -6,5 +6,6 @@
     "ny":1000,
     "setup":"ARTIFICIAL2D",
     "endTime":100,
-    "writingFrequency":100
+    "writingFrequency":100,
+    "checkpointFrequency": 10
 }
