--- a/src/SConscript
+++ b/src/SConscript
@@ -1,7 +1,7 @@
 ##
 # @author Alexander Breuer (alex.breuer AT uni-jena.de)
 #
-# @section DESCRIPTION
+# # Description
 # Collects sources for a build.
 ##
 Import('env')
