removed filesystem from tsunamevent1d in benchmarking mode

--- a/configs/config.json
+++ b/configs/config.json
@@ -1,11 +1,11 @@
 {
     "solver": "fwave",
-    "simulationSizeX": 1000000,
-    "simulationSizeY": 1000000,
-    "nx":1000,
-    "ny":1000,
+    "simulationSizeX": 10000,
+    "simulationSizeY": 10000,
+    "offsetX": 5000,
+    "offsetY": 5000,
+    "nx":2000,
+    "ny":2000,
     "setup":"ARTIFICIAL2D",
-    "endTime":50,
-    "writingFrequency":10,
-    "checkpointFrequency": 10
+    "endTime":50
 }
