--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,12 +8,12 @@ name: Tsunami Lab
 on:
   push:
     branches:    
-      - 'dev'
+      - 'develop'
       - 'main'
 
   pull_request:
     branches:    
-      - 'dev'
+      - 'develop'
       - 'main'
 
   schedule:
