enabled openmp support for macos

--- a/src/SConscript
+++ b/src/SConscript
@@ -1,5 +1,6 @@
 ##
-# @author Alexander Breuer (alex.breuer AT uni-jena.de)
+# @author Luca-Philipp Grumbach
+# @author Richard Hofmann
 #
 # # Description
 # Collects sources for a build.
