--- a/imgui.ini
+++ b/imgui.ini
@@ -1,9 +1,10 @@
 [Window][Debug##Default]
-Pos=60,60
+Pos=60,112
 Size=400,400
+Collapsed=1
 
 [Window][Dear ImGui Demo]
-Pos=650,20
+Pos=199,-14
 Size=550,680
 
 [Window][Welcome to the Tsunami Simulator GUI!]
