--- a/imgui.ini
+++ b/imgui.ini
@@ -4,8 +4,8 @@ Size=400,400
 Collapsed=1
 
 [Window][Dear ImGui Demo]
-Pos=199,-14
-Size=550,680
+Pos=536,59
+Size=550,526
 
 [Window][Welcome to the Tsunami Simulator GUI!]
 Pos=118,58
