added opengl test

--- a/imgui.ini
+++ b/imgui.ini
@@ -8,10 +8,14 @@ Pos=536,59
 Size=550,526
 
 [Window][Welcome to the Tsunami Simulator GUI!]
-Pos=646,135
-Size=360,377
+Pos=239,104
+Size=360,395
 
 [Window][Simulation parameters]
 Pos=60,60
 Size=159,146
+
+[Window][Runtime Customization]
+Pos=60,60
+Size=414,279
 
