closed memory leak

--- a/imgui.ini
+++ b/imgui.ini
@@ -8,7 +8,7 @@ Pos=536,59
 Size=550,526
 
 [Window][Welcome to the Tsunami Simulator GUI!]
-Pos=1083,109
+Pos=781,109
 Size=360,395
 
 [Window][Simulation parameters]
@@ -18,4 +18,5 @@ Size=159,146
 [Window][Runtime Customization]
 Pos=82,151
 Size=762,549
+Collapsed=1
 
