added client log and added descriptions to communicator

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,11 +4,11 @@ Size=400,400
 Collapsed=1
 
 [Window][Dear ImGui Demo]
-Pos=536,59
+Pos=574,220
 Size=550,526
 
 [Window][Welcome to the Tsunami Simulator GUI!]
-Pos=421,138
+Pos=410,61
 Size=360,395
 
 [Window][Simulation parameters]
@@ -19,4 +19,12 @@ Size=159,146
 Pos=82,151
 Size=762,549
 Collapsed=1
+
+[Window][Client log]
+Pos=781,118
+Size=369,244
+
+[Window][Example: Console]
+Pos=1184,410
+Size=520,600
 
