add gui features

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,11 +4,11 @@ Size=400,400
 Collapsed=1
 
 [Window][Dear ImGui Demo]
-Pos=574,220
+Pos=255,69
 Size=550,526
 
 [Window][Welcome to the Tsunami Simulator GUI!]
-Pos=209,65
+Pos=211,65
 Size=360,395
 
 [Window][Simulation parameters]
@@ -27,4 +27,9 @@ Size=658,370
 [Window][Example: Console]
 Pos=1184,410
 Size=520,600
+
+[Window][Compile Options]
+Pos=60,60
+Size=351,202
+Collapsed=1
 
