--- a/imgui.ini
+++ b/imgui.ini
@@ -8,7 +8,7 @@ Pos=255,69
 Size=550,526
 
 [Window][Welcome to the Tsunami Simulator GUI!]
-Pos=211,65
+Pos=211,66
 Size=360,395
 
 [Window][Simulation parameters]
@@ -32,4 +32,12 @@ Size=520,600
 Pos=60,60
 Size=351,202
 Collapsed=1
+
+[Window][Welcome to the Tsunami Simulator GUI! (NOT CONNECTED)]
+Pos=60,60
+Size=482,364
+
+[Window][Welcome to the Tsunami Simulator GUI! (CONNECTED)]
+Pos=21,26
+Size=803,471
 
