add more options

--- a/imgui.ini
+++ b/imgui.ini
@@ -1,5 +1,5 @@
 [Window][Debug##Default]
-Pos=60,112
+Pos=60,111
 Size=400,400
 Collapsed=1
 
@@ -8,12 +8,12 @@ Pos=255,69
 Size=550,526
 
 [Window][Welcome to the Tsunami Simulator GUI!]
-Pos=211,66
+Pos=210,66
 Size=360,395
 
 [Window][Simulation parameters]
-Pos=60,60
-Size=159,146
+Pos=183,170
+Size=365,146
 
 [Window][Runtime Customization]
 Pos=82,151
@@ -40,4 +40,8 @@ Size=482,364
 [Window][Welcome to the Tsunami Simulator GUI! (CONNECTED)]
 Pos=21,26
 Size=803,471
+
+[Window][Runtime parameters]
+Pos=60,60
+Size=200,117
 
