add more features and begin to write json for config

--- a/imgui.ini
+++ b/imgui.ini
@@ -36,6 +36,7 @@ Collapsed=1
 [Window][Welcome to the Tsunami Simulator GUI! (NOT CONNECTED)]
 Pos=60,60
 Size=482,364
+Collapsed=1
 
 [Window][Welcome to the Tsunami Simulator GUI! (CONNECTED)]
 Pos=76,113
@@ -44,4 +45,24 @@ Size=803,471
 [Window][Runtime parameters]
 Pos=60,60
 Size=200,117
+
+[Window][Stacked 1]
+Pos=545,372
+Size=409,172
+
+[Window][Stacked 2]
+Pos=637,422
+Size=226,71
+
+[Window][Delete?]
+Pos=594,405
+Size=311,105
+
+[Window][Dear ImGui Demo/ResizableChild_D5443E47]
+IsChild=1
+Size=499,136
+
+[Window][Dear ImGui Demo/Red_1D4E05CE]
+IsChild=1
+Size=200,100
 
