--- a/src/SConscript
+++ b/src/SConscript
@@ -9,6 +9,7 @@ Import('env')
 
 # gather sources
 l_sources = [ 'Simulator.cpp',
+              'systeminfo/SystemInfo.cpp',
               'solvers/Roe.cpp',
               'solvers/Fwave.cpp',
               'patches/WavePropagation1d.cpp',
