--- a/configs/config.json
+++ b/configs/config.json
@@ -8,8 +8,9 @@
     "ny":100,
     "setup":"CIRCULARDAMBREAK2D",
     "writingFrequency":50,
-    "endTime":30,
+    "endTime":50,
     "baseHeight":5,
     "diameter":10,
-    "height":100
+    "height":100,
+    "timeStepScaling": 0.2
 }
